Build layout for mood entry activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Year In Pixels</string>
+    <string name="rating_prompt">Overall mood today:</string>
+    <string name="writing_prompt">Write something about your day:</string>
+    <string name="writing_button_description">Button for adding a description for the current day</string>
+    <string name="date_placeholder_text">Placeholder for date</string>
 </resources>
