--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="writing_prompt">Write something about your day</string>
     <string name="writing_button_description">Button for adding a description for the current day</string>
     <string name="date_placeholder_text">Placeholder for date</string>
+    <string name="select_mood_warning">You must select a pixel color before saving!</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
 </resources>
