--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Year In Pixels</string>
+    <string name="preference_file_key">PixelData</string>
     <string name="rating_prompt">Overall mood today:</string>
     <string name="description_prompt">Add a description:</string>
     <string name="writing_prompt">Write something about your day</string>
