--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="okay">Okay</string>
     <string name="good">Good</string>
     <string name="great">Great</string>
+    <string name="mood_icon_description">Mood emoticon for this date</string>
 </resources>
