--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="great">Great</string>
     <string name="mood_icon_description">Mood emoticon for this date</string>
     <string name="settings">Settings</string>
+    <string name="color_settings_title">Change your pixel colors:</string>
+    <string name="edit_color_button_description">Button for editing the color of a pixel</string>
 </resources>
